@startuml
class Personaje{
-nombre: String
-vida: int
-Danno: int
-HabilidadEspecial: String
}
class Heroes extends Personaje{

    - rangoMovimiento: int
    - rangoAtaque: int
    + mover(casillaDestino: Casillas): void
    + atacar(objetivo: Enemigo): void
    + usarHabilidad(): void
}
 class CapitanOrion extends Heroes{
+InspiracionGalactica():void
}
class Nova extends Heroes{
+DesactivarTrampas():void
}
class Zorak extends Heroes {
+GolpeDeEnergia():void
}
class Lyra extends Heroes{
+CuracionCosmica():void
}
class Quasar extends Heroes{
+ReparacionRapida():void
}
class Eclipse extends Heroes{
+AtaqueFurtivo():void
}
class Titan extends Heroes{
+EscudoEnergia():void
}
class Stella extends Heroes{
+ControlMental():void
}
class Vortex extends Heroes{
+TormentaCosmica():void
}
class Aurora extends Heroes{
+Negociacion():void
}
    class Blaze extends Heroes{
+DisparoExplosivo():void
}
class Luna extends Heroes{
+InstintoDeCazadora():void
}
class Cygnus extends Heroes{

+ManiobraEvasiva():void
}
class OrionJr extends Heroes{

+PotencialDesbloqueado():void
}
class Nebula extends Heroes{

+SabiduriaAncestral():void
}
class Phobos extends Heroes{

+DisparoLetal():void
}
class Deimos extends Heroes{

+Infiltracion():void
}
class Solara extends Heroes{

+MurallaDeLuz():void
}
class Comet extends Heroes{

+GolpeRelampago():void
}
class Andromeda extends Heroes{

+RitualEstelar():void
}



class Enemigo  extends Personaje{
    - comportamientoIA: String
    - FrecuenciaHabilidad
    + actuar(): void
}

class DroneCombate extends Enemigo{

    + escanear(): void
}

class ArañaCósmica  extends Enemigo{

    + lanzarRed(): void
}
class PiratasEspaciales extends Enemigo {

+robo():void
}
class GiganteDeLava extends Enemigo{

+erupción():void
}



class Tablero {
    - casillas: List<Casillas>
    - ancho: int
    - alto: int
    + generarNivel(nivel: int): void
    + obtenerCasillas(x: int, y: int): Casillas
}

class Casillas  {
    - x: int
    - y: int
    - tipo: String
    - contenido:
    - peligro: String
    + estaOcupada(): boolean ObjetoMagico
}

class ObjetoMagico {
    - nombre: String
    - efecto: String
    - rangoUso: int
    + usar(): void
}
class PocionCurativa extends ObjetoMagico{

+restauraVida()
}
class EscudoEnergia extends ObjetoMagico{

+Absorbe()
}
class BombaPlasma extends ObjetoMagico{
-danno: int

+Explota()
}

class Acertijo  {
    - descripcion: String
    - solucion: String
    + resolver(intento: String): boolean
}

class Juego {

    - enemigos: List<Enemigo>
    - tablero: Tablero
    - turnoActual: int
    + iniciarPartida(): void
    + finalizarTurno(): void
    + verificarVictoria(): boolean
}






Juego "1" *-- "1" Tablero: tiene


Juego "1" *-- "1..*" Acertijo: tiene

Juego "1" *-- "1..*" Personaje

Casillas "1" *-- "1..*" Personaje: tiene
Tablero "1" *-- "1..*" Casillas: tiene
Casillas "1" *-- "1..*" ObjetoMagico: tiene
@enduml
